# Network_Automation

./: README.md
Postman_Collections/: Cisco_CML.json  README.md
Python_for_Beginners/: ChineseChef.py  Learn_Build_a_Translator_21.py  Learn_Dictionaries_15.py  Learn_Exponent_Function_19.py  Learn_For_Loops.py  Learn_Functions_10.py  Learn_If_Statments_Comparison_14.py  Learn_Inheritance_30.py  Learn_Input_Function_4.py  Learn_Lists_Function_8.py  Learn_Modules_and_PIP_26.py  Learn_Phrase_Function_2.py  Learn_Python_Interpreter_31.py  Learn_Reading_Files_24.py  Learn_Return_Statement_11.py  Learn_Strings_Float_5.py  Learn_Try Except_23.py  Learn_Tuples_9.py  Learn_User_Input_Madlibs_6.py  Learn_Writing_Files_25.py  Map.txt
cisco-sd-wan-export-import/: README.md  output.txt  pyproject.toml  sd-wan-exim.py
postman-collections/: Cisco_CML.json
python-for-beginners/: #Learn Python - Full Course for Beginner.py  Learn_2D_List_Nested_Loops_20.py  Learn_Building_Guessing_Game_17.py  Learn_Building_a_Multiple_Choice_Quiz_28.py  Learn_Classes_and_Objects_27.py  Learn_Comments_22.py  Learn_If_Statements_12.py  Learn_If_Statements_Function_13.py  Learn_Lists_7.py  Learn_Object_Functions_29.py  Learn_Print_Function_Math_Import_3.py  Learn_Variables_1.py  Learn_While_Loop_16.py  README.md  Student.py  useful_tools.py
python-netmiko/: DR_VTP_Revision_Ver_2.2.py  Post-Data-Collection-BGP-Regex.py  backup_config_cisco_arista_devices_function.py  backup_config_cisco_devices.py  backup_config_cisco_scp.py  config_output_compare.py  config_output_diff.py  send_config_from_file.py  (+3 more)
(+14 files in other folders)
